# O957-TIL

./: .markdownlint.yaml  .nojekyll  .pre-commit-config.yaml  CODE_OF_CONDUCT.html  CONTRIBUTING.html  README.md  _quarto.yaml  _typos.toml  index.html  index.qmd  index.xml  listings.json  mkdocs.yml  pyproject.toml  references.html  references.qmd  robots.txt  ruff.toml  search.json  sitemap.xml
.github/: dependabot.yaml
posts/: _metadata.yaml  ide_open_vscode_from_cmd_line.html  ide_open_vscode_from_cmd_line.qmd  ide_vs_codium.html  ide_vs_codium.qmd  python_check_csv_equivalence_using_polars.html  python_check_csv_equivalence_using_polars.qmd  python_find_empty_pdfs_using_pathlib.html  python_find_empty_pdfs_using_pathlib.qmd  python_get_remaining_dates_in_year_using_datetime.html  python_get_remaining_dates_in_year_using_datetime.qmd  python_uniformly_partitioning_a_string_textwrap.html  python_uniformly_partitioning_a_string_textwrap.qmd  r_handle_unbound_tidyr_variables.html  r_handle_unbound_tidyr_variables.qmd  references.bib
python/: check_csv_equivalence_using_polars.html  check_csv_equivalence_using_polars.md  check_csv_equivalence_using_polars.qmd  find_empty_pdfs_using_pathlib.html  find_empty_pdfs_using_pathlib.md  find_empty_pdfs_using_pathlib.qmd  get_remaining_dates_in_year.md  get_remaining_dates_in_year_using_datetime.html  get_remaining_dates_in_year_using_datetime.qmd  uniformly_partitioning_a_string.md  uniformly_partitioning_a_string_textwrap.html  uniformly_partitioning_a_string_textwrap.qmd
r/: handle_unbound_tidyr_variables.html  (+2 more)
(+15 files in other folders)
