[project]
name = "o957-til"
version = "0.0.1"
authors = [
  {name = "O957", email = "127630341+O957@users.noreply.github.com"},
]
description = "A collection of references and demonstrations for concepts and methods that I have come across and want to mentally retain."
license = "Apache-2.0"
readme = "README.md"
keywords = ["TIL"]
requires-python = ">=3.11"
dependencies = [
    "polars>=1.41.2",
]

[project.urls]
Repository = "https://github.com/O957/O957-TIL"
Issues = "https://github.com/O957/O957-TIL/issues"
"Author GitHub" = "https://github.com/O957"
